Write comment on next line after line breaks

--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -10,7 +10,8 @@
   </head>
   
   <body>
-    <br><!--Header-->
+    <br>
+    <!--Header-->
     <header>
       <div>
         <span>Techium</span>
@@ -18,18 +19,21 @@
       </div>
     </header>
     
-    <br><!--Main-->
+    <br>
+    <!--Main-->
     <main>
       <h1>Homepage</h1>
       
-      <br><!--Hero section-->
+      <br>
+      <!--Hero section-->
       <section>
         <div>
           <h2>We help you build your brand!</h2>
         </div>
       </section>
 
-      <br><!--Services section-->
+      <br>
+      <!--Services section-->
       <section>
         <div>
           <header>
@@ -48,7 +52,8 @@
         </div>
       </section>
 
-      <br><!--Works section-->
+      <br>
+      <!--Works section-->
       <section>
         <div>
           <header>
@@ -70,7 +75,8 @@
         </div>
       </section>
 
-      <br><!--About Us section-->
+      <br>
+      <!--About Us section-->
       <section>
         <div>
           <header>
@@ -91,7 +97,8 @@
         </div>
       </section>
 
-      <br><!--Latest news section-->
+      <br>
+      <!--Latest news section-->
       <section>
         <div>
           <header>
@@ -120,7 +127,8 @@
         </div>
       </section>
 
-      <br><!--Testimonials section-->
+      <br>
+      <!--Testimonials section-->
       <section>
         <div>
           <header>
@@ -136,7 +144,8 @@
         </div>
       </section>
 
-      <br><!--Contact section-->
+      <br>
+      <!--Contact section-->
       <section>
         <div>
           <header>
