--- a/0x00-html_advanced/24-index.html
+++ b/0x00-html_advanced/24-index.html
@@ -10,7 +10,8 @@
   </head>
   
   <body>
-    <br><!--Header-->
+    <br>
+    <!-- Header -->
     <header>
       <div>
         <div>
@@ -22,12 +23,12 @@
         <nav>
           <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/services">Services</a></li>
-            <li><a href="/works">Works</a></li>
-            <li><a href="/about">About Us</a></li>
-            <li><a href="/latest_news">Latest News</a></li>
-            <li><a href="/testimonials">Testimonials</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#works">Works</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#latest_news">Latest news</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>  
         </nav>
       </div>
@@ -172,6 +173,8 @@
       </section>
     </main>
 
+    <br>
+    <!-- Footer -->
     <footer>
       <div>
         <ul>
