--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -98,7 +98,7 @@
             <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers.</p>
             <p>I understand culture. I am the nucleus.</p>
             <p>I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
-            <footer><cite>Kanye West, Musician</cite></footer>
+            <p><cite>Kanye West, Musician</cite></p>
           </blockquote>
         </div>
       </section>
