Wrap inline quote in <p>

--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -89,7 +89,7 @@
 
         <div>
           <h3>Inline quote</h3>
-          <q>Stay hungry. Stay foolish.</q>
+          <p><q>Stay hungry. Stay foolish.</q></p>
         </div>
 
         <div>
