--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -193,7 +193,7 @@
     <br>
     <!--Footer section-->
     <footer>
-      234 Washington Street<br> Urbana, Illinois
+      <p>234 Washington Street<br> Urbana, Illinois</p>
       <div>
         <ul>
           <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
