--- a/0x00-html_advanced/32-styleguide.html
+++ b/0x00-html_advanced/32-styleguide.html
@@ -111,7 +111,7 @@
 
         <div>
           <address>
-            320 Stewart Avenue, Unit 12 <br> New York City NY 10001
+            <p>320 Stewart Avenue, Unit 12 <br> New York City NY 10001</p>
           </address>
         </div>
 
