--- a/0x03-responsive_design/04-index.html
+++ b/0x03-responsive_design/04-index.html
@@ -20,7 +20,7 @@
           </a>
         </div>
         <input type="checkbox" id="menu-btn" class="menu-btn">
-        <label for="menu-btn" class="menu-btn">
+        <label for="menu-btn" class="menu-icon">
           <span class="navicon"></span>
         </label>
         <nav class="navbar-menu">
